# boiler-plates

./: .gitignore  LICENSE  README.md  boiler-plates.sln  check_test_coverage.sh  coverage-badge.json  list_uncovered_folders.sh
.github/chatmodes/: Debugging Expert.chatmode.md
.github/workflows/: check-uncovered-folders.yml  ci.yml  test-ada.yml  test-bash.yml  test-cobol.yml  test-cpp.yml  test-crystal.yml  test-csharp.yml  test-d.yml  test-dart.yml  test-docker.yml  (+6 more)
ada/: hello.adb
bash/: README.md
c/: README.md
cobol/: hello.cob
cpp/: CMakeLists.txt  README.md
crystal/: shard.yml
csharp/: README.md
d/: dub.json
dart/: README.md  pubspec.yaml
docker/: README.md  package-lock.json
elixir/: mix.exs
erlang/: Makefile  hello.erl
fastapi/: README.md  main.py
flask-app/: README.md  app.py
fortran/: hello.f90
fsharp/: Program.fs
go/: README.md  go.mod  main.go
groovy/: hello.groovy
haskell/: haskell-boilerplate.cabal  stack.yaml
haskell/app/: Main.hs
java-maven/: README.md  pom.xml
julia/: hello.jl
kotlin/: README.md  build.gradle.kts
lua/: hello.lua
nim/: main.nim
node-express/: README.md  index.js  package-lock.json  package.json
objective-c/: Makefile  main.m
perl/: hello.pl
php/: README.md  index.php
powershell/: README.md
python-package/: README.md  pyproject.toml
r/: hello.R
react-vite/: README.md  index.html  package-lock.json  package.json
ruby/: README.md
rust/: Cargo.toml  README.md
scala/: build.sbt
swift/: Package.swift
typescript/: README.md  package.json
v/: main.v
zig/: main.zig
(+13 files in other folders)
