cabal-version:       2.4
name:                haskell-boilerplate
version:             0.1.0.0
build-type:          Simple

library
  exposed-modules:     Lib
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5
  default-language:    Haskell2010

executable haskell-boilerplate
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base >=4.7 && <5,
                       haskell-boilerplate
  default-language:    Haskell2010